changes for community version